--- a/index.Rmd
+++ b/index.Rmd
@@ -7,4 +7,5 @@ Hello, There!
 
 This website is to show my works on projects and for you to get to know me.
 
-If you are interested in projects I did please click on the **Projects** drop down menu, and go to my projects.
+If you are interested in projects I did please click on the **Projects** 
+drop down menu, and go to my projects.
